# Tetris

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py  callbacks.py
src/assets/: style.css
src/components/: board.py  layout.py
src/game/: constants.py  pieces.py  tetris_engine.py
src/tests/e2e/: test_ui.py
src/tests/integration/: test_callback.py
src/tests/unity/: test_engine.py  test_piece.py  test_scoring.py
