[project]
name = "tetris"
version = "0.1.0"
description = "Tetris game built with Plotly Dash"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dash>=2.14.0,<3.0.0",
    "dash-extensions>=1.0.0,<2.0.0",
    "loguru>=0.7.3",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "dash[testing]>=2.14.0",
    "pre-commit>=3.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "selenium>=4.0.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
]

# ── Formatting ────────────────────────────────────────────────────────────────

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
known_first_party = ["game", "components"]

# ── Type checking ─────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true

# ── Testing ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-v --tb=short --cov=game --cov-report=term-missing --cov-fail-under=80"
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m not e2e')",
]

[tool.coverage.run]
source = ["game"]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
